--- a/topics/Android/View Binding and Data Binding/View Binding in Main Activity/build.gradle
+++ b/topics/Android/View Binding and Data Binding/View Binding in Main Activity/build.gradle
@@ -4,4 +4,4 @@ android {
         viewBinding true
     }
 }
-//It enables the view binding feature so that we can use it
+//Here we have to explicitly enable the view binding
